--- a/GA.conf
+++ b/GA.conf
@@ -18,7 +18,7 @@ server=/dl.l.google.com/119.29.29.29
 
 [policy]
 ## 策略组
-static=网易音乐, 网易解锁, direct, img-url=
+static=网易音乐, 网易解锁, direct
 static=Netflix, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy, img-url=
 static=YouTube, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy, img-url=
 static=TikTok, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy, img-url=
