--- a/GA.conf
+++ b/GA.conf
@@ -19,19 +19,19 @@ server=/dl.l.google.com/119.29.29.29
 [policy]
 ## 策略组
 static=网易音乐, 网易解锁, direct
-static=Netflix, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy, img-url=
-static=YouTube, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy, img-url=
-static=TikTok, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy, img-url=
-static=Telegram, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy, img-url=
-static=Twitter, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy, img-url=
+static=Netflix, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy
+static=YouTube, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy
+static=TikTok, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy
+static=Telegram, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy
+static=Twitter, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy
 static=全球加速, 专线自动, 普线自动, 香港, 台湾, 日本, 新加坡, 美国, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 static=苹果服务, direct, 专线自动, 普线自动, 香港, 台湾, 美国, 日本, 新加坡, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Apple.png
 static=港台番剧, direct, 专线自动, 普线自动, 香港, 台湾, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
 static=国际媒体, 专线自动, 普线自动, 香港, 台湾, 日本, 美国, 新加坡, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 static=黑白名单, 专线自动, 普线自动, direct, 香港, 台湾, 日本, 新加坡, 美国, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 # 服务器按机场分组策略
-url-latency-benchmark=专线自动, server-tag-regex=(?=.*(IEPL|CEN|AGA|BGP|GIA))^((?!(台|日|韩|新|美)).)*$, check-interval=600, tolerance=0, img-url=
-url-latency-benchmark=普线自动, server-tag-regex=(?=.*(V3))^((?!(台|日|韩|新|美)).)*$, check-interval=600, tolerance=0, img-url=
+url-latency-benchmark=专线自动, server-tag-regex=(?=.*(IEPL|CEN|AGA|BGP|GIA))^((?!(台|日|韩|新|美)).)*$, check-interval=600, tolerance=0
+url-latency-benchmark=普线自动, server-tag-regex=(?=.*(V3))^((?!(台|日|韩|新|美)).)*$, check-interval=600, tolerance=0
 # 服务器按地区分组策略
 url-latency-benchmark=香港, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|美)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 url-latency-benchmark=台湾, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
