--- a/GA.conf
+++ b/GA.conf
@@ -87,7 +87,7 @@ host, ocsp.apple.com, reject
 [rewrite_remote]
 ##远程重写订阅
 # 薅羊毛Cookie
-https://raw.githubusercontent.com/GlodenApple/QuantumultX/master/TaskCookie.conf, tag=Cookie, update-interval=86400, opt-parser=false, enabled=fal
+https://raw.githubusercontent.com/GlodenApple/QuantumultX/master/TaskCookie.conf, tag=羊毛Cookie, update-interval=86400, opt-parser=false, enabled=false
 # boxjs
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.tf.conf, tag=BoxJS, update-interval=86400, opt-parser=false, enabled=true
 # Tiktok解锁
