--- a/GA.conf
+++ b/GA.conf
@@ -1,10 +1,15 @@
 # Quantumult X 个人配置
 
 [general]
+# Quantumult X 会对指定的网址进行相应测试，以确认节点的可用性
 server_check_url=http://bing.com/
+# list中的域名将不使用fake-ip方式, 多个域名用“, ”连接。其它域名则全部采用 fake-ip及远程解析的模式
 dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
+# 用于节点页面的信息展示，可完整自定义
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/Orz-3/Orz-3/master/QuantumultX/IP.js
+# 给 Quantumult X 添加资源解析器
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+# 下列表中内容将不经过 QuantumultX 的处理
 excluded_routes=239.255.255.250/32
 
 [dns]
