--- a/JS.conf
+++ b/JS.conf
@@ -1,4 +1,4 @@
-hostname = api.*.cn, mp.weixin.qq.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, *.xiaoxiao*.com, *.amemv.com, *.my10api.com, apple.fuliapps.com, ap*.intsig.net, mp.bybutter.com, account.wps.cn, api.meiease.c*, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, trade-acs.m.taobao.com, api.m.jd.com, ios.prod.ftl.netflix.com
+hostname = api.*.cn, mp.weixin.qq.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, *.xiaoxiao*.com, *.amemv.com, *.my10api.com, apple.fuliapps.com, ap*.intsig.net, mp.bybutter.com, account.wps.cn, api.meiease.c*, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, trade-acs.m.taobao.com, api.m.jd.com, ios.prod.ftl.netflix.com, 
 
 
 # Quantumult X 脚本: 啪啪啪研究所vip❤凉意  下载链接🔗推荐码：NDHJVB
