--- a/Cookie.conf
+++ b/Cookie.conf
@@ -1,8 +1,8 @@
-hostname = api.m.jd.com, clientaccess.10086.cn, music.163.com, *.m.163.com, zt.wps.cn, mobwsa.ximalaya.com, api.didialift.com, bosp-api.xiaojukeji.com, as.xiaojukeji.com, manhattan.webapp.xiaojukeji.com, *.diditaxi.com.cn, i.meituan.com, promotion.waimai.meituan.com, maicai.api.ddxq.mobi, gameapi.hellobike.com
+hostname = api.m.jd.com, clientaccess.10086.cn, music.163.com, *.m.163.com, zt.wps.cn, mobwsa.ximalaya.com, api.didialift.com, m.ctrip., bosp-api.xiaojukeji.com, as.xiaojukeji.com, manhattan.webapp.xiaojukeji.com, *.diditaxi.com.cn, i.meituan.com, promotion.waimai.meituan.com, maicai.api.ddxq.mobi, gameapi.hellobike.com
 
 # 京东
-https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, m.ctrip.com
-# 10086
+https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
+# 10086com
 ^http:\/\/wx.10086.cn\/website\/taskCenter\/index\? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.cookie.js
 ^http:\/\/wx.10086.cn\/website\/taskCenter\/sign\? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.cookie.js
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
